# dinosaur-escape-room

./: .env.example  README.md  dinosaur-escape-room.py  pyproject.toml  requirements.txt
src/: main.py
src/dino_escape_room/: collision.py  config.py  main.py
src/dino_escape_room/utils/: resource_path.py
src/game/: models.py
src/module/: coords.py
tests/: test_collision.py
