[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "dinosaur-escape-room"
version = "0.1.0"
description = "dinosaur escape room game."
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
test = [
    "pytest>=8.0",
]
build = [
    "pyinstaller>=6.0",
]

[project.scripts]
dino-escape = "dino_escape_room.main:main"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
dino_escape_room = ["resources/**/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
